# jgnes

./: .gitignore  Cargo.toml  README.md  clippy.toml  nespalette.pal
.github/workflows/: rust.yml
jgnes-cli/: Cargo.toml
jgnes-cli/src/: main.rs
jgnes-core/: Cargo.toml
jgnes-core/src/: api.rs  apu.rs  bus.rs  ppu.rs
jgnes-core/src/bus/: cartridge.rs
jgnes-core/src/bus/cartridge/mappers/: mmc1.rs  mmc2.rs  mmc3.rs  mmc5.rs
jgnes-core/src/bus/cartridge/mappers/konami/: vrc4.rs  vrc6.rs  vrc7.rs
jgnes-core/src/cpu/instructions/: tests.rs
jgnes-core/src/cpu/instructions/tests/: load.rs
jgnes-gui/: Cargo.toml
jgnes-gui/src/: app.rs  emuthread.rs  lib.rs  main.rs  romlist.rs
jgnes-native-driver/: Cargo.toml
jgnes-native-driver/src/: audio.rs  colors.rs  config.rs  input.rs  lib.rs  render.rs  shader.wgsl  texture_scale.wgsl
jgnes-renderer/: Cargo.toml
jgnes-renderer/src/: colors.rs  config.rs  lib.rs  renderer.rs  shader.wgsl
jgnes-renderer/src/renderer/: blur.wgsl  prescale.wgsl  render.wgsl  shader.wgsl  shaders.rs  vertex.wgsl
jgnes-web/: .gitignore  Cargo.toml  README.md  TextEncoder.js  audio-processor.js  build.sh  index.html
jgnes-web/.cargo/: config.toml
jgnes-web/js/: audio-processor.js  save-writer.js  ui.js
jgnes-web/src/: audio.rs  config.rs  js.rs  lib.rs  main.rs
