[workspace]
members = [
    "jgnes-proc-macros",
    "jgnes-core",
    "jgnes-renderer",
    "jgnes-native-driver",
    "jgnes-cli",
    "jgnes-gui",
    "jgnes-web",
]
resolver = "2"

[workspace.dependencies]
# Pin serde to <= 1.0.171 until/unless serde_derive stops including precompiled binaries
serde = { version = "<= 1.0.171", features = ["derive"] }

# This is necessary because the latest published version of rust-sdl2 (0.35.2) uses raw-window-handle 0.4 which is
# incompatible with wgpu using raw-window-handle 0.5
[workspace.dependencies.sdl2]
git = "https://github.com/Rust-SDL2/rust-sdl2.git"
rev = "819ab438ac971a922d6ee1da558822002d343b4e"
features = ["raw-window-handle"]

[profile.dev]
opt-level = 1

[profile.release-lto]
inherits = "release"
lto = true

[profile.profiling]
inherits = "release"
debug = true

[profile.profiling-lto]
inherits = "profiling"
lto = true
