[package]
name = "jgnes-cli"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgnes-proc-macros = { path = "../jgnes-proc-macros" }
jgnes-core = { path = "../jgnes-core" }
jgnes-renderer = { path = "../jgnes-renderer" }
jgnes-native-driver = { path = "../jgnes-native-driver" }

anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
env_logger = "0.10"