[package]
name = "jgnes-gui"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgnes-core = { path = "../jgnes-core" }
jgnes-renderer = { path = "../jgnes-renderer" }
jgnes-native-driver = { path = "../jgnes-native-driver" }

anyhow = "1"
eframe = "0.22"
egui = "0.22"
egui_extras = "0.22"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
rfd = "0.11"
serde = { workspace = true }
toml = "0.7"

# This is necessary because the latest published version of rust-sdl2 (0.35.2) uses raw-window-handle 0.4 which is
# incompatible with wgpu using raw-window-handle 0.5
[dependencies.sdl2]
git = "https://github.com/Rust-SDL2/rust-sdl2.git"
rev = "819ab438ac971a922d6ee1da558822002d343b4e"

[target.'cfg(target_os = "linux")'.dependencies]
xrandr = "0.2"
