[package]
name = "jgnes-gui"
version = "0.6.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgnes-core = { path = "../jgnes-core" }
jgnes-renderer = { path = "../jgnes-renderer" }
jgnes-native-driver = { path = "../jgnes-native-driver" }

anyhow = "1"
eframe = "0.22"
egui = "0.22"
egui_extras = "0.22"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
rfd = "0.11"
sdl2 = { workspace = true }
serde = { workspace = true }
toml = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
xrandr = "0.2"
