[package]
name = "jgnes-gui"
version = "0.6.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgnes-core = { path = "../jgnes-core" }
jgnes-renderer = { path = "../jgnes-renderer" }
jgnes-native-driver = { path = "../jgnes-native-driver" }

anyhow = "1"
eframe = "0.30"
egui = "0.30"
egui_extras = "0.30"
env_logger = "0.11"
log = "0.4"
rand = "0.9"
rfd = "0.15"
sdl2 = { workspace = true }
serde = { workspace = true }
toml = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
xrandr = "0.2"

[lints]
workspace = true
