[package]
name = "jgnes-native-driver"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgnes-core = { path = "../jgnes-core" }
jgnes-renderer = { path = "../jgnes-renderer" }

anyhow = "1.0"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
pollster = "0.3"
serde = { version = "1", features = ["derive"] }
tinyvec = "1"
wgpu = "0.16"

# This is necessary because the latest published version of rust-sdl2 (0.35.2) uses raw-window-handle 0.4 which is
# incompatible with wgpu using raw-window-handle 0.5
[dependencies.sdl2]
git = "https://github.com/Rust-SDL2/rust-sdl2.git"
rev = "819ab438ac971a922d6ee1da558822002d343b4e"
features = ["raw-window-handle"]