[package]
name = "jgnes-native-driver"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgnes-proc-macros = { path = "../jgnes-proc-macros" }
jgnes-core = { path = "../jgnes-core" }
jgnes-renderer = { path = "../jgnes-renderer" }

anyhow = "1.0"
log = "0.4"
pollster = "0.3"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tinyvec = "1"

# This is necessary because the latest published version of rust-sdl2 (0.35.2) uses raw-window-handle 0.4 which is
# incompatible with wgpu using raw-window-handle 0.5
[dependencies.sdl2]
git = "https://github.com/Rust-SDL2/rust-sdl2.git"
rev = "819ab438ac971a922d6ee1da558822002d343b4e"
features = ["raw-window-handle"]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = ["Win32_Media"] }