[package]
name = "jgnes-native-driver"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgnes-proc-macros = { path = "../jgnes-proc-macros" }
jgnes-core = { path = "../jgnes-core" }
jgnes-renderer = { path = "../jgnes-renderer" }

anyhow = "1"
log = "0.4"
pollster = "0.3"
sdl2 = { workspace = true }
serde = { workspace = true }
thiserror = "1"
tinyvec = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = ["Win32_Media"] }
