[package]
name = "jgnes-renderer"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgnes-proc-macros = { path = "../jgnes-proc-macros" }
jgnes-core = { path = "../jgnes-core" }

anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
raw-window-handle = "0.5"
wgpu = "0.16"
