[package]
name = "jgnes-web"
version = "0.6.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["webgl"]
webgl = ["wgpu/webgl"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
jgnes-proc-macros = { path = "../jgnes-proc-macros" }
jgnes-core = { path = "../jgnes-core" }
jgnes-renderer = { path = "../jgnes-renderer" }

base64 = "0.21"
console_error_panic_hook = "0.1"
console_log = "1"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
log = "0.4"
rand = "0.8"
rfd = "0.11"
serde = { workspace = true }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = "0.17"
winit = { version = "0.28", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "AudioContext",
    "AudioContextOptions",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "ChannelCountMode",
    "AudioWorkletProcessor",
    "AudioDestinationNode",
    "Performance",
]

[lints]
workspace = true
